// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  font-weight: normal;
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  display: inline-block;
  line-height: calc(13px * 1.2);
  line-height: calc(var(--wp-g2-font-size) * 1.2);
  margin: 0;
  max-width: 100%;
  padding-bottom: calc((30px - calc(13px * 1.2)) / 2);
  padding-bottom: calc((var(--wp-g2-control-height) - calc(var(--wp-g2-font-size) * 1.2)) / 2);
  padding-top: calc((30px - calc(13px * 1.2)) / 2);
  padding-top: calc((var(--wp-g2-control-height) - calc(var(--wp-g2-font-size) * 1.2)) / 2);
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #1e1e1e;
  color: var(--wp-g2-color-text);
  line-height: 1.2;
  line-height: var(--wp-g2-font-line-height-base);
  font-size: calc(1 * 13px);
  font-size: calc(1 * var(--wp-g2-font-size));
  font-weight: normal;
  font-weight: var(--wp-g2-font-weight);
  display: inline-block;
  vertical-align: middle;
}

@media (prefers-reduced-motion) {
  .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
    -webkit-transition: none !important;
    transition: none !important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  -webkit-transition: none !important;
  transition: none !important;
}

.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0:active {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

@media (-webkit-min-device-pixel-ratio:1.25), (min-resolution:120dpi) {
  .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 > * {
    position: relative;
    top: 0.5px;
  }
}

<label
  class="components-truncate wp-components-truncate components-text wp-components-text components-control-label wp-components-control-label emotion-0"
  data-g2-c16t="true"
  data-g2-component="ControlLabel"
>
  Label
</label>
`;

exports[`props should render no truncate 1`] = `
.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  font-weight: normal;
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  display: inline-block;
  line-height: calc(13px * 1.2);
  line-height: calc(var(--wp-g2-font-size) * 1.2);
  margin: 0;
  max-width: 100%;
  padding-bottom: calc((30px - calc(13px * 1.2)) / 2);
  padding-bottom: calc((var(--wp-g2-control-height) - calc(var(--wp-g2-font-size) * 1.2)) / 2);
  padding-top: calc((30px - calc(13px * 1.2)) / 2);
  padding-top: calc((var(--wp-g2-control-height) - calc(var(--wp-g2-font-size) * 1.2)) / 2);
  color: #1e1e1e;
  color: var(--wp-g2-color-text);
  line-height: 1.2;
  line-height: var(--wp-g2-font-line-height-base);
  font-size: calc(1 * 13px);
  font-size: calc(1 * var(--wp-g2-font-size));
  font-weight: normal;
  font-weight: var(--wp-g2-font-weight);
  display: inline-block;
  vertical-align: middle;
}

@media (prefers-reduced-motion) {
  .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
    -webkit-transition: none !important;
    transition: none !important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  -webkit-transition: none !important;
  transition: none !important;
}

.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0:active {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

@media (-webkit-min-device-pixel-ratio:1.25), (min-resolution:120dpi) {
  .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 > * {
    position: relative;
    top: 0.5px;
  }
}

<label
  class="components-truncate wp-components-truncate components-text wp-components-text components-control-label wp-components-control-label emotion-0"
  data-g2-c16t="true"
  data-g2-component="ControlLabel"
>
  Label
</label>
`;

exports[`props should render size 1`] = `
.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  font-weight: normal;
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  display: inline-block;
  line-height: calc(13px * 1.2);
  line-height: calc(var(--wp-g2-font-size) * 1.2);
  margin: 0;
  max-width: 100%;
  padding-bottom: calc((30px - calc(13px * 1.2)) / 2);
  padding-bottom: calc((var(--wp-g2-control-height) - calc(var(--wp-g2-font-size) * 1.2)) / 2);
  padding-top: calc((30px - calc(13px * 1.2)) / 2);
  padding-top: calc((var(--wp-g2-control-height) - calc(var(--wp-g2-font-size) * 1.2)) / 2);
  padding-bottom: calc((calc(30px * 0.8) - calc(13px * 1.2)) / 2);
  padding-bottom: calc((var(--wp-g2-control-height-small) - calc(var(--wp-g2-font-size) * 1.2)) / 2);
  padding-top: calc((calc(30px * 0.8) - calc(13px * 1.2)) / 2);
  padding-top: calc((var(--wp-g2-control-height-small) - calc(var(--wp-g2-font-size) * 1.2)) / 2);
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #1e1e1e;
  color: var(--wp-g2-color-text);
  line-height: 1.2;
  line-height: var(--wp-g2-font-line-height-base);
  font-size: calc(1 * 13px);
  font-size: calc(1 * var(--wp-g2-font-size));
  font-weight: normal;
  font-weight: var(--wp-g2-font-weight);
  display: inline-block;
  vertical-align: middle;
}

@media (prefers-reduced-motion) {
  .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
    -webkit-transition: none !important;
    transition: none !important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  -webkit-transition: none !important;
  transition: none !important;
}

.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0:active {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

@media (-webkit-min-device-pixel-ratio:1.25), (min-resolution:120dpi) {
  .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 > * {
    position: relative;
    top: 0.5px;
  }
}

<label
  class="components-truncate wp-components-truncate components-text wp-components-text components-control-label wp-components-control-label emotion-0"
  data-g2-c16t="true"
  data-g2-component="ControlLabel"
>
  Label
</label>
`;
